feat!: replace REST device profile callback with System Events
BREAKING CHANGE: remove PUT /callback/profile  REST endpoint
